# synthesator-for-cnn

./: .gitignore  README.md
archive/src0000/: CMakeLists.txt  factorizator_functions.cpp  getmatrix.cpp
run/: matrix.txt  matrix.txt-old  matrix_log.txt  matrix_terms.txt  redo.sh  redotest.sh  rungdb.sh
src/: extractor.cpp  factorizator.cpp  factorizator.h  multiply.cpp  synthesator_functions.cpp
tmp/: MatrixVectorProduct.h  extractor.cpp  extractor_functions.cpp  factorizator.cpp  factorizator.h  factorizator_functions.cpp  inmemory_matrix_product.cpp  multiply.cpp  multiply.cpp-irig  patterns  read_me_step_3_synthesize_matrix_vector_multiplication_schematics.txt  stdafx.cpp
